# p3dtools

./: LICENSE.md  README.md
crates/gltf_builder/: Cargo.toml
crates/gltf_builder/src/: lib.rs  trait_components.rs  trait_le_bytes.rs  types.rs
crates/p3d2gltf/: Cargo.toml
crates/p3d2gltf/src/: bin_p3d2gltf.rs  builder.rs  lib.rs
crates/p3d2obj/: .gitignore  Cargo.toml
crates/p3d2obj/src/: bin_p3d2obj.rs  lib.rs
crates/p3dhl/: Cargo.toml
crates/p3dhl/src/: lib.rs
crates/p3dobj/: .gitignore  Cargo.toml
crates/p3dobj/src/: bin_p3d2obj.rs  lib.rs
crates/p3dparse/: .gitignore  Cargo.toml
crates/p3dparse/src/: bin_test.rs  bytes_ext.rs  chunk.rs  lib.rs  result.rs
crates/p3dparse/src/chunk/: data.rs  type_identifiers.rs  types.rs
crates/p3dparse/src/chunk/data/: chunks.rs  common_types.rs  data_enum.rs  data_enum_impl.rs  helpers.rs  kinds.rs  parse_trait.rs  types.rs
crates/p3dparse/src/chunk/data/chunks/: animation.rs  channel.rs  explosion.rs  image.rs  mesh.rs  name.rs  old_billboard.rs  old_particle_system.rs  shader.rs  shader_param.rs  skeleton.rs  texture.rs  version.rs
crates/p3dparse/src/chunk/data/kinds/: channel.rs  collision.rs  explosion.rs  export.rs  file_metadata.rs  game_metadata.rs  gameattr.rs  image.rs  locator.rs  mesh.rs  name.rs  object.rs  old_billboard.rs  old_particle_system.rs  physics.rs  prop_state.rs  pure3d_other.rs  scenegraph.rs  shader.rs  shader_param.rs  shared.rs  skeleton.rs  texture.rs  version.rs
crates/p3dparse/src/chunk/data/types/: animation.rs  channel.rs  collision.rs  explosion.rs  gameattr.rs  image.rs  locator.rs  mesh.rs  name.rs  object.rs  old_billboard.rs  old_particle_system.rs  physics.rs  prop_state.rs  scenegraph.rs  shader.rs  shader_param.rs  shared.rs  skeleton.rs  texture.rs  version.rs
crates/p3dparse/src/tests/: .gitignore  mod.rs  real_assets.rs
