[package]
name = "p3d2gltf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
eyre = "0.6.8"
itertools = "0.10.5"
serde = "1.0.152"
serde_json = "1.0.93"
clap = { version = "4.1.6", features = ["cargo"] }
p3dhl = { path = "../p3dhl" }
p3dparse = { path = "../p3dparse" }
gltf_builder = { path = "../gltf_builder" }
gltf-json = { version = "1.1.0", features = ["names"] }
nalgebra = "0.32.1"
walkdir = "2.3.2"
indicatif = "0.17.3"

[[bin]]
name = "p3d2gltf"
path = "src/bin_p3d2gltf.rs"
