[package]
name = "p3dparse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
num_enum = "0.5.9"
eyre = "0.6.8"
paste = "1.0.11"
hexdump = "0.1.1"

[[bin]]
name = "test-p3dparse"
path = "src/bin_test.rs"
